Add jfoenix to build.gradle